test/scc/decl/semantic-errors/076.t
void foo(_Thread_local int a)
{
}